catalytic_table_to_struct/example/src/non_compiling_code/non_existing_table.rs
use catalytic_macro::query;

fn main() -> Result<(), scylla::frame::value::SerializeValuesError> {
    query!("select * from idontexist");

    Ok(())
}